--- a/web/index.html
+++ b/web/index.html
@@ -25,11 +25,15 @@
 
             <footer class="hud-footer">
                 <div class="control-group">
-                    <button id="camera-toggle" class="hud-btn">CAM</button>
+                    <button id="camera-toggle" class="hud-btn" title="Switch Camera">CAM</button>
+                    <button id="isolate-btn" class="hud-btn" title="Toggle Vision Mode">NORM</button>
                     <button id="reset-btn" class="hud-btn">RESET</button>
                 </div>
 
                 <div class="control-group">
+                    <button id="level-mode-btn" class="hud-btn">GAIN: AUTO</button>
+                    <button id="level-center-btn" class="hud-btn" style="display:none">LVL: 127</button>
+                    <button id="level-width-btn" class="hud-btn" style="display:none">WID: 64</button>
                     <button id="zoom-btn" class="hud-btn">ZOOM: 1X</button>
                 </div>
 
