--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,12 @@
                         <span id="exp-val">0</span>
                     </div>
 
+                    <div class="control-row" title="Glare Gating (Suppress bright hotspots)">
+                        <label>GATE</label>
+                        <input type="range" id="gate-slider" min="50" max="255" value="255">
+                        <span id="gate-val">OFF</span>
+                    </div>
+
                     <div class="control-row">
                         <label>CON</label>
                         <input type="range" id="con-slider" min="0.5" max="3.0" step="0.1" value="1.0">
