--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
         <div class="hud-container">
             <header class="hud-header">
                 <div class="hud-logo">SIGHT-LINE v1.0</div>
+                <div id="tgt-coord" class="hud-metric" style="color:var(--accent)">TGT: -- / --</div>
                 <div id="fps" class="hud-metric">FPS: 0</div>
                 <div id="status" class="hud-status">STATUS: STANDBY</div>
             </header>
