--- a/web/index.html
+++ b/web/index.html
@@ -82,6 +82,7 @@
                     <div class="control-group">
                         <button id="camera-toggle" class="hud-btn">CAM</button>
                         <button id="isolate-btn" class="hud-btn">NORM</button>
+                        <button id="radar-btn" class="hud-btn">RDR</button>
                         <button id="reset-btn" class="hud-btn">RESET</button>
                     </div>
 
